--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,9 @@
-# Node.js
-# Build a general Node.js project with npm.
-# Add steps that analyze code, save build artifacts, deploy, and more:
-# https://docs.microsoft.com/azure/devops/pipelines/languages/javascript
 
 trigger:
-- master
+- main
 
 pool:
-  vmImage: ubuntu-latest
+  name: MyMacAgent  # Changed from 'vmImage: ubuntu-latest'
 
 steps:
 - task: NodeTool@0
@@ -17,16 +13,9 @@ steps:
 
 - script: |
     npm install
-  displayName: 'npm install'
-
-# Only build if you have a build script
-- script: |
     npm run build
-  displayName: 'npm build'
-  condition: succeededOrFailed()
+  displayName: 'npm install and build'
+```
 
-# Run tests (if you have them)
-- script: |
-    npm test
-  displayName: 'npm test'
-  condition: succeededOrFailed()
+---
+
